<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.jdi</groupId>
    <artifactId>jdi-light-angular-tests</artifactId>
    <version>1.6.2-SNAPSHOT</version>
    <name>Tests: JDI Angular</name>

    <properties>
        <jdi.version>1.6.2-SNAPSHOT</jdi.version>
        <driver>chrome</driver>
        <aspectj.version>1.9.20</aspectj.version>
        <java.version>11</java.version>
        <allure.testng>2.25.0</allure.testng>
        <allure.maven>2.12.0</allure.maven>
        <jetty.version>9.4.12.RC2</jetty.version>
        <suite-xml-file>src/test/resources/general.xml</suite-xml-file>
        <!-- - - add-opens java.base/java.lang=ALL-UNNAMED is needed for JDK 16+ -->
        <aspectj.args></aspectj.args>
        <testng.version>7.8.0</testng.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.epam.jdi</groupId>
            <artifactId>jdi-light-angular</artifactId>
            <version>${jdi.version}</version>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>${jetty.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>${suite-xml-file}</suiteXmlFile>
                    </suiteXmlFiles>
                    <argLine>
                        ${aspectj.args}
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <properties>
                        <property>
                            <name>listener</name>
                            <value>io.qameta.allure.testng.AllureTestNg</value>
                        </property>
                    </properties>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure.maven}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <configLocation>../config/checkstyle/checkstyle.xml</configLocation>
                    <propertyExpansion>samedir=${project.basedir}/../config/checkstyle</propertyExpansion>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>

        <testResources>
            <testResource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </testResource>
        </testResources>
    </build>

    <reporting>
        <excludeDefaults>true</excludeDefaults>
        <plugins>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
            </plugin>
        </plugins>
    </reporting>

    <profiles>
        <profile>
            <id>unit</id>
            <properties>
                <suite-xml-file>src/test/resources/unit.xml</suite-xml-file>
            </properties>
        </profile>
        <profile>
            <id>common</id>
            <properties>
                <suite-xml-file>src/test/resources/common.xml</suite-xml-file>
            </properties>
        </profile>
        <profile>
            <id>complex</id>
            <properties>
                <suite-xml-file>src/test/resources/complex.xml</suite-xml-file>
            </properties>
        </profile>
        <profile>
            <id>jdk16</id>
            <activation>
                <jdk>[16,)</jdk>
            </activation>
            <properties>
                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
            </properties>
        </profile>
    </profiles>
</project>
